--- a/clase1.html
+++ b/clase1.html
@@ -10,7 +10,7 @@
   <title>Document</title>
   <style>
     :root {
-      --white: #FFFFFF;
+      --white: #f1f1f1;
       --black: #000000;
       --very-light-pink: #C7C7C7;
       --text-input-field: #F7F7F7;
